--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\PbBhosale\AppData\Local\Temp\testng-eclipse-540933379\testng-customsuite.xml</span>
+                    <span>C:\Users\PbBhosale\AppData\Local\Temp\testng-eclipse-76571883\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.DriverProfile.TC005_PATCH_LocationPINCode" hash-for-method="patch_UpdateDriverLocPINCODE">patch_UpdateDriverLocPINCODE</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.DriverProfile.TC005_PATCH_LocationPINCode" hash-for-method="post_drierVerify_Valid_UNM_PWD">post_drierVerify_Valid_UNM_PWD</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.PassengerProfile.TC001_Post_PassengerRegisteration" hash-for-method="post_PassengerRegi_EmptyData">post_PassengerRegi_EmptyData</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.DriverProfile.TC005_PATCH_LocationPINCode</span>
+              <span class="class-name">com.PassengerProfile.TC001_Post_PassengerRegisteration</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="patch_UpdateDriverLocPINCODE">
-                  </a> <!-- patch_UpdateDriverLocPINCODE -->
-                  <span class="method-name">patch_UpdateDriverLocPINCODE</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="post_drierVerify_Valid_UNM_PWD">
-                  </a> <!-- post_drierVerify_Valid_UNM_PWD -->
-                  <span class="method-name">post_drierVerify_Valid_UNM_PWD</span>
+                  <a name="post_PassengerRegi_EmptyData">
+                  </a> <!-- post_PassengerRegi_EmptyData -->
+                  <span class="method-name">post_PassengerRegi_EmptyData</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PbBhosale\AppData\Local\Temp\testng-eclipse-540933379\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PbBhosale\AppData\Local\Temp\testng-eclipse-76571883\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.DriverProfile.TC005_PATCH_LocationPINCode&quot;/&gt;
+      &lt;class name=&quot;com.PassengerProfile.TC001_Post_PassengerRegisteration&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -196,20 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'post_drierVerify_Valid_UNM_PWD')
-data.setCell(0, 2, 'com.DriverProfile.TC005_PATCH_LocationPINCode')
-data.setCell(0, 3, 5089);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'patch_UpdateDriverLocPINCODE')
-data.setCell(1, 2, 'com.DriverProfile.TC005_PATCH_LocationPINCode')
-data.setCell(1, 3, 205);
+data.setCell(0, 1, 'post_PassengerRegi_EmptyData')
+data.setCell(0, 2, 'com.PassengerProfile.TC001_Post_PassengerRegisteration')
+data.setCell(0, 3, 4256);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,31 +219,15 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.DriverProfile.TC005_PATCH_LocationPINCode</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.PassengerProfile.TC001_Post_PassengerRegisteration</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">post_drierVerify_Valid_UNM_PWD</span>
-                <span class="method-start">141 ms</span>
+                <span class="method-name">post_PassengerRegi_EmptyData</span>
+                <span class="method-start">315 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=post_drierVerify_Valid_UNM_PWD status=SUCCESS method=TC005_PATCH_LocationPINCode.po...)</span>
-                <span class="method-start">5234 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">patch_UpdateDriverLocPINCODE</span>
-                <span class="method-start">5251 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=patch_UpdateDriverLocPINCODE status=SUCCESS method=TC005_PATCH_LocationPINCode.patc...)</span>
-                <span class="method-start">5458 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-test after">
-                <span class="method-name">endReport</span>
-                <span class="method-start">5463 ms</span>
-              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
