--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bca669">  <td>20/08/14 20:24:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.DriverProfile.TC005_PATCH_LocationPINCode@d35dea7]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@391630194</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>20/08/14 20:24:28</td>   <td>138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC005_PATCH_LocationPINCode.post_drierVerify_Valid_UNM_PWD()[pri:0, instance:com.DriverProfile.TC005_PATCH_LocationPINCode@d35dea7]">post_drierVerify_Valid_UNM_PWD</td> 
-  <td>main@391630194</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>20/08/14 20:24:33</td>   <td>5233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC005_PATCH_LocationPINCode.tearDown(org.testng.ITestResult)[pri:0, instance:com.DriverProfile.TC005_PATCH_LocationPINCode@d35dea7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@391630194</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>20/08/14 20:24:33</td>   <td>5248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC005_PATCH_LocationPINCode.patch_UpdateDriverLocPINCODE()[pri:1, instance:com.DriverProfile.TC005_PATCH_LocationPINCode@d35dea7]">patch_UpdateDriverLocPINCODE</td> 
-  <td>main@391630194</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>20/08/14 20:24:33</td>   <td>5455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC005_PATCH_LocationPINCode.tearDown(org.testng.ITestResult)[pri:0, instance:com.DriverProfile.TC005_PATCH_LocationPINCode@d35dea7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@391630194</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>20/08/14 20:24:33</td>   <td>5461</td> <td>&nbsp;</td><td title="&lt;&lt;TC005_PATCH_LocationPINCode.endReport()[pri:0, instance:com.DriverProfile.TC005_PATCH_LocationPINCode@d35dea7]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@391630194</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>20/08/18 20:17:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.PassengerProfile.TC001_Post_PassengerRegisteration@4c178a76]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422330142</td>   <td></td> </tr>
+<tr bgcolor="6fc185">  <td>20/08/18 20:17:53</td>   <td>288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_Post_PassengerRegisteration.post_PassengerRegi_EmptyData()[pri:0, instance:com.PassengerProfile.TC001_Post_PassengerRegisteration@4c178a76]">post_PassengerRegi_EmptyData</td> 
+  <td>main@422330142</td>   <td></td> </tr>
 </table>
